--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,34 @@
-alembic==1.8.1
-autopep8==1.7.0
-blinker==1.4
-boto3==1.28.73
-botocore==1.31.73
-click==8.1.3
-colorama==0.4.5
-dnspython==2.0.0
-email-validator==1.1.2
-Flask==2.2.2
-Flask-Cors==3.0.10
-Flask-Dropzone==1.5.4
-Flask-JWT-Extended==4.4.4
+alembic==1.12.1
+bcrypt==3.1.7
+boto3==1.14.2
+botocore==1.17.2
+cffi==1.16.0
+click==8.1.7
+docutils==0.15.2
+Flask==2.1.3
+Flask-Bcrypt==0.7.1
 Flask-Login==0.6.2
-Flask-Mail==0.9.1
-Flask-Migrate==3.1.0
-flask-msearch==0.2.9.2
-Flask-PyMongo==2.3.0
+Flask-Migrate==4.0.5
 Flask-SQLAlchemy==2.5.1
-Flask-WTF==1.2.1
-greenlet==1.1.3
-gunicorn==20.1.0
-idna==2.10
+Flask-WTF==0.14.3
+gunicorn==19.9.0
 importlib-metadata==6.8.0
-importlib-resources==6.1.0
-itsdangerous==2.1.2
+importlib-resources==6.1.1
+itsdangerous==2.0.0
 Jinja2==3.0.3
-jmespath==1.0.1
-Mako==1.2.3
-MarkupSafe==2.1.1
-Pillow==8.0.1
-psycopg2-binary==2.9.9
-pycodestyle==2.9.1
-PyJWT==2.5.0
-pymongo==4.5.0
-python-dateutil==2.8.1
-python-dotenv==0.21.0
-python-editor==1.0.4
-pytz==2022.2.1
-s3transfer==0.7.0
+jmespath==0.10.0
+Mako==1.2.4
+MarkupSafe==2.1.3
+Pillow==7.1.2
+psycopg2==2.8.5
+pycparser==2.21
+python-dateutil==2.8.2
+s3transfer==0.3.7
 six==1.16.0
-SQLAlchemy==1.4.41
-timeago==1.0.16
-toml==0.10.2
+SQLAlchemy==1.3.17
+timeago==1.0.14
 typing_extensions==4.8.0
-urllib3==1.26.18
-Werkzeug==2.2.3
-Whoosh==2.7.4
-WTForms==2.3.3
+urllib3==1.25.11
+Werkzeug==2.0.3
+WTForms==3.1.0
 zipp==3.17.0
